--- a/3.html
+++ b/3.html
@@ -3,6 +3,16 @@
 <head>
     <title>WEB - JavaScript</title>
     <meta charset="utf-8">
+    <style>
+        h1 {
+            font-size: 45px;
+            text-align: center;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
